tests/errors/refs/001.ura
// errors/refs/001 — a plain reference must be bound at its declaration

main():
    ref r int
    return 0